--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="search">Search</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_Bottom_sheet">Two Clusters and a Comet</string>
+    <string name="description_bottom_sheet">This lovely starfield spans some four full moons.</string>
+    <string name="theme_one">Оранжевая тема</string>
+    <string name="theme_second">Зеленая тема</string>
 </resources>
