--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,13 @@
     <string name="description_bottom_sheet">This lovely starfield spans some four full moons.</string>
     <string name="theme_one">Оранжевая тема</string>
     <string name="theme_second">Зеленая тема</string>
+    <string name="yesterday">Yesterday</string>
+    <string name="today">Today</string>
+    <string name="two_days_ago">Two days Ago</string>
+    <string name="tab_1">Tab 1</string>
+    <string name="tab_2">Tab 2</string>
+    <string name="tab_3">Tab 3</string>
+    <string name="text_for_theme_one">Оранжево</string>
+    <string name="text_for_theme_second">Зеленее!</string>
+    <string name="text_for_usual_theme">Обычно</string>
 </resources>
