--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,18 @@
     <string name="think">Think</string>
     <string name="wht">WHT</string>
     <string name="univers">Univers</string>
+    <string name="text">"Сопло ракеты было отполировано до зеркального блеска."
+        "В гладком металле Ян видел свое искаженное отражение — слишком большая голова, слишком узкие плечи,"
+        "торчащие как лопухи уши, растрепанная грива черных волос. Налобный фонарик горел яркой разлапистой звездой.
+        "Комната смеха с кривыми зеркалами, а не пусковая установка.  — Температура плюс три! — скомандовал офицер пуска. — Втулка четыре!"
+        "В руку Яна легла тяжелая бронзовая втулка. На всякий случай он глянул: убедился, что номер правильный,"
+        "— и стал аккуратно, чтобы не сбить резьбу, вкручивать втулку внутрь сопла."
+        "«Гром» был новой моделью баллистических ракет с улучшенной точностью попадания. Но давалось это непросто."
+        "Мало того что пусковая установка должна была устанавливаться с немыслимой точностью,"
+        "так еще и сама ракета настраивалась в зависимости от массы параметров: скорости ветра, температуры, срока,"
+        "прошедшего с момента изготовления топлива. Шашки пороховых двигателей со временем меняли параметры горения,"
+        "и это тоже надо было учитывать."</string>
+    <string name="screen1">Constraint</string>
+    <string name="screen2">Coordinator</string>
 
 </resources>
