--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,9 @@
         "и это тоже надо было учитывать."</string>
     <string name="screen1">Constraint</string>
     <string name="screen2">Coordinator</string>
+    <string name="screen3">Recycler</string>
+    <string name="cats_description">The cat (Felis catus) is a domestic species of small carnivorous mammal. It is the only domesticated species in the family Felidae and is often referred to as the domestic cat to distinguish it from the wild members of the family.</string>
+    <string name="dogs">Dogs</string>
+    <string name="cats">Cats</string>
 
 </resources>
